unarxive-en2ru dataset completed

--- a/notebooks/data/dataset_translate.ipynb
+++ b/notebooks/data/dataset_translate.ipynb
@@ -18,10 +18,11 @@
     "import os\n",
     "import json\n",
     "from getpass import getpass\n",
+    "import multiprocessing\n",
     "\n",
     "import pandas as pd\n",
     "import openai\n",
-    "import multiprocessing\n",
+    "from tqdm import tqdm\n",
     "\n",
     "from src.data.translate_openai import translate_openai"
    ],
@@ -96,7 +97,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "num_workers = 5\n",
+    "num_workers = 8\n",
     "\n",
     "# Create and start worker processes\n",
     "workers = []\n",
@@ -155,10 +156,14 @@
     "            idx = int(line[:pos])\n",
     "            aft = line[pos + 3:]\n",
     "            targets[idx] = aft.strip()\n",
-    "        df = pd.DataFrame({'src': src, 'target': targets})\n",
+    "        df = pd.DataFrame({'source': src, 'target': targets})\n",
     "\n",
     "        # fix missing values by trying to translate again\n",
-    "        df.loc[df['target'].isna(), 'target'] = [translate_openai(s) for s in df.loc[df['target'].isna(), 'src']]\n",
+    "        print(f\"Fixing missing values in {split_name}...\")\n",
+    "        # save the indices of missing values\n",
+    "        idx = df.loc[df['target'].isna()].index\n",
+    "        print(list(idx))\n",
+    "        df.loc[df['target'].isna(), 'target'] = [translate_openai(s) for s in tqdm(df.loc[df['target'].isna(), 'source'])]\n",
     "\n",
     "        df.to_csv(os.path.join(processed_folder, split_name + '.csv'), index=False)"
    ],
@@ -166,6 +171,16 @@
     "collapsed": false
    },
    "id": "ad2c459cb00b2897"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Results have been saved to `data/processed` folder and uploaded to huggingface datasets as [unarxive-en2ru](https://huggingface.co/datasets/waleko/unarxive-en2ru)."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3bf0923602f361f9"
   }
  ],
  "metadata": {
