candidate inference configured

--- a/notebooks/finetune/candidates_inference.ipynb
+++ b/notebooks/finetune/candidates_inference.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -14,12 +23,22 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/user010/Desktop/Programming/ML/En2RuTranslator\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
     "\n",
     "root_dir = os.path.abspath(os.path.join(os.getcwd(), '../..'))\n",
+    "print(root_dir)\n",
+    "assert os.path.exists(root_dir), f'Could not find root directory at {root_dir}'\n",
     "sys.path.insert(0, root_dir)\n",
     "\n",
     "from custom_utils.config_handler import read_config, pprint_config"
@@ -27,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -36,24 +55,34 @@
      "text": [
       "{\n",
       "  \"root\": \"/Users/user010/Desktop/Programming/ML/En2RuTranslator\",\n",
+      "  \"opus_model\": {\n",
+      "    \"name\": \"opus-en-ru\",\n",
+      "    \"model_and_tokenizer_name\": \"Helsinki-NLP/opus-mt-en-ru\"\n",
+      "  },\n",
       "  \"nnlb_model\": {\n",
       "    \"name\": \"nnlb-1.3B-distilled\",\n",
       "    \"model_and_tokenizer_name\": \"facebook/nllb-200-distilled-1.3B\"\n",
       "  },\n",
-      "  \"mt_model\": {\n",
-      "    \"name\": \"transformer-en-ru\",\n",
-      "    \"model_and_tokenizer_name\": \"Helsinki-NLP/opus-mt-en-ru\"\n",
+      "  \"inference_dataset\": {\n",
+      "    \"path\": \"/Users/user010/Desktop/Programming/ML/En2RuTranslator/data/processed/model_eval.csv\"\n",
       "  },\n",
-      "  \"inference_dataset_path\": \"/Users/user010/Desktop/Programming/ML/En2RuTranslator/data/processed/model_eval.csv\",\n",
-      "  \"results_path\": \"/Users/user010/Desktop/Programming/ML/En2RuTranslator/data/model_eval_results.csv\"\n",
+      "  \"result_dataset\": {\n",
+      "    \"path\": \"/Users/user010/Desktop/Programming/ML/En2RuTranslator/data/processed/model_eval_results.csv\",\n",
+      "    \"cols\": {\n",
+      "      \"reference\": \"target\",\n",
+      "      \"candidates\": [\n",
+      "        \"transformer-en-ru\",\n",
+      "        \"nnlb-1.3B-distilled\"\n",
+      "      ]\n",
+      "    }\n",
+      "  }\n",
       "}\n"
      ]
     }
    ],
    "source": [
-    "path_config = \"../../conf/config.yaml\"\n",
-    "global_cfg = read_config(path_config)\n",
-    "cfg = read_config(global_cfg.notebook_configs.finetune.candidates_inference, root=global_cfg.root)\n",
+    "overrides = [\"setup=inference\"]\n",
+    "cfg = read_config(overrides=overrides)\n",
     "pprint_config(cfg)"
    ]
   },
@@ -163,9 +192,9 @@
    "source": [
     "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
     "\n",
-    "model_and_tokenizer_name = cfg.mt_model.model_and_tokenizer_name\n",
-    "mt_tokenizer = AutoTokenizer.from_pretrained(model_and_tokenizer_name)\n",
-    "mt_model = AutoModelForSeq2SeqLM.from_pretrained(model_and_tokenizer_name)"
+    "model_and_tokenizer_name = cfg.opus_model.model_and_tokenizer_name\n",
+    "opus_tokenizer = AutoTokenizer.from_pretrained(model_and_tokenizer_name)\n",
+    "opus_model = AutoModelForSeq2SeqLM.from_pretrained(model_and_tokenizer_name)"
    ]
   },
   {
@@ -193,7 +222,7 @@
     }
    ],
    "source": [
-    "translations = get_translations(mt_model, mt_tokenizer, sample_texts)\n",
+    "translations = get_translations(opus_model, opus_tokenizer, sample_texts)\n",
     "print_translations(sample_texts, translations)"
    ]
   },
@@ -280,7 +309,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "inference_ds = pd.read_csv(cfg.inference_dataset_path)\n",
+    "inference_ds = pd.read_csv(cfg.inference_dataset.path)\n",
     "inference_ds.head()"
    ]
   },
@@ -1393,11 +1422,11 @@
     }
    ],
    "source": [
-    "# mt\n",
+    "# opus\n",
     "translations = []\n",
     "for i in tqdm(range(num_batches)):\n",
     "    batch = inference_ds.iloc[i*batch_size:(i+1)*batch_size][\"source\"].tolist()\n",
-    "    batch_translations = get_translations(mt_model, mt_tokenizer, batch)\n",
+    "    batch_translations = get_translations(opus_model, opus_tokenizer, batch)\n",
     "    translations.extend(batch_translations)"
    ]
   },
@@ -1407,7 +1436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inference_ds[cfg.mt_model.name] = translations"
+    "inference_ds[cfg.opus_model.name] = translations"
    ]
   },
   {
@@ -1527,7 +1556,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inference_ds.to_csv(cfg.results_path, index=False)"
+    "inference_ds.to_csv(cfg.result_dataset.path, index=False)"
    ]
   }
  ],
