--- a/notebooks/finetune/finetune.ipynb
+++ b/notebooks/finetune/finetune.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,9 +85,8 @@
     }
    ],
    "source": [
-    "config_dir = os.path.join(root_dir, 'conf')\n",
     "overrides = [\"setup=finetune\"]\n",
-    "cfg = read_config(config_dir, overrides=overrides)\n",
+    "cfg = read_config(overrides=overrides)\n",
     "pprint_config(cfg)"
    ]
   },
@@ -118,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -246,83 +245,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Metric(name: \"sacrebleu\", features: {'predictions': Value(dtype='string', id='sequence'), 'references': Sequence(feature=Value(dtype='string', id='sequence'), length=-1, id='references')}, usage: \"\"\"\n",
-       "Produces BLEU scores along with its sufficient statistics\n",
-       "from a source against one or more references.\n",
-       "\n",
-       "Args:\n",
-       "    predictions (`list` of `str`): list of translations to score. Each translation should be tokenized into a list of tokens.\n",
-       "    references (`list` of `list` of `str`): A list of lists of references. The contents of the first sub-list are the references for the first prediction, the contents of the second sub-list are for the second prediction, etc. Note that there must be the same number of references for each prediction (i.e. all sub-lists must be of the same length).\n",
-       "    smooth_method (`str`): The smoothing method to use, defaults to `'exp'`. Possible values are:\n",
-       "        - `'none'`: no smoothing\n",
-       "        - `'floor'`: increment zero counts\n",
-       "        - `'add-k'`: increment num/denom by k for n>1\n",
-       "        - `'exp'`: exponential decay\n",
-       "    smooth_value (`float`): The smoothing value. Only valid when `smooth_method='floor'` (in which case `smooth_value` defaults to `0.1`) or `smooth_method='add-k'` (in which case `smooth_value` defaults to `1`).\n",
-       "    tokenize (`str`): Tokenization method to use for BLEU. If not provided, defaults to `'zh'` for Chinese, `'ja-mecab'` for Japanese and `'13a'` (mteval) otherwise. Possible values are:\n",
-       "        - `'none'`: No tokenization.\n",
-       "        - `'zh'`: Chinese tokenization.\n",
-       "        - `'13a'`: mimics the `mteval-v13a` script from Moses.\n",
-       "        - `'intl'`: International tokenization, mimics the `mteval-v14` script from Moses\n",
-       "        - `'char'`: Language-agnostic character-level tokenization.\n",
-       "        - `'ja-mecab'`: Japanese tokenization. Uses the [MeCab tokenizer](https://pypi.org/project/mecab-python3).\n",
-       "    lowercase (`bool`): If `True`, lowercases the input, enabling case-insensitivity. Defaults to `False`.\n",
-       "    force (`bool`): If `True`, insists that your tokenized input is actually detokenized. Defaults to `False`.\n",
-       "    use_effective_order (`bool`): If `True`, stops including n-gram orders for which precision is 0. This should be `True`, if sentence-level BLEU will be computed. Defaults to `False`.\n",
-       "\n",
-       "Returns:\n",
-       "    'score': BLEU score,\n",
-       "    'counts': Counts,\n",
-       "    'totals': Totals,\n",
-       "    'precisions': Precisions,\n",
-       "    'bp': Brevity penalty,\n",
-       "    'sys_len': predictions length,\n",
-       "    'ref_len': reference length,\n",
-       "\n",
-       "Examples:\n",
-       "\n",
-       "    Example 1:\n",
-       "        >>> predictions = [\"hello there general kenobi\", \"foo bar foobar\"]\n",
-       "        >>> references = [[\"hello there general kenobi\", \"hello there !\"], [\"foo bar foobar\", \"foo bar foobar\"]]\n",
-       "        >>> sacrebleu = datasets.load_metric(\"sacrebleu\")\n",
-       "        >>> results = sacrebleu.compute(predictions=predictions, references=references)\n",
-       "        >>> print(list(results.keys()))\n",
-       "        ['score', 'counts', 'totals', 'precisions', 'bp', 'sys_len', 'ref_len']\n",
-       "        >>> print(round(results[\"score\"], 1))\n",
-       "        100.0\n",
-       "\n",
-       "    Example 2:\n",
-       "        >>> predictions = [\"hello there general kenobi\",\n",
-       "        ...                 \"on our way to ankh morpork\"]\n",
-       "        >>> references = [[\"hello there general kenobi\", \"hello there !\"],\n",
-       "        ...                 [\"goodbye ankh morpork\", \"ankh morpork\"]]\n",
-       "        >>> sacrebleu = datasets.load_metric(\"sacrebleu\")\n",
-       "        >>> results = sacrebleu.compute(predictions=predictions,\n",
-       "        ...                             references=references)\n",
-       "        >>> print(list(results.keys()))\n",
-       "        ['score', 'counts', 'totals', 'precisions', 'bp', 'sys_len', 'ref_len']\n",
-       "        >>> print(round(results[\"score\"], 1))\n",
-       "        39.8\n",
-       "\"\"\", stored examples: 0)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metric"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -351,108 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14095b3d19bc482fa1888a149a035558",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)okenizer_config.json:   0%|          | 0.00/42.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92cdb4000bfb4331a3ee41fa2bb52fe9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)lve/main/config.json:   0%|          | 0.00/1.38k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28e80541c8574841bf0594fd69fc402b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)olve/main/source.spm:   0%|          | 0.00/803k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aba8286fb1a94ec9b1b2b0106f743526",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)olve/main/target.spm:   0%|          | 0.00/1.08M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e3d7d53345d4b16a5485636083f69ac",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)olve/main/vocab.json:   0%|          | 0.00/2.60M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8a3d9c3048841b0922020ac375f60d9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading pytorch_model.bin:   0%|          | 0.00/307M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a60797baa19d4ed4943504a79de17835",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)neration_config.json:   0%|          | 0.00/293 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
     "\n",
@@ -505,8 +328,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_length = 512\n",
+    "max_length = cfg.params.max_length\n",
     "\n",
+    "# remove\n",
     "def preprocess_function(examples):\n",
     "    inputs = [ex for ex in examples[\"source\"]]\n",
     "    targets = [ex for ex in examples[\"target\"]]\n",
@@ -613,11 +437,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"evaluation_strategy\": \"epoch\",\n",
+      "  \"learning_rate\": 2e-05,\n",
+      "  \"per_device_train_batch_size\": 16,\n",
+      "  \"per_device_eval_batch_size\": 16,\n",
+      "  \"weight_decay\": 0.01,\n",
+      "  \"save_total_limit\": 3,\n",
+      "  \"num_train_epochs\": 4,\n",
+      "  \"predict_with_generate\": true\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint_config(cfg.params.train_args)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 16\n",
     "model_name = cfg.pretrained.name\n",
     "args = Seq2SeqTrainingArguments(\n",
     "    cfg.finetuned.output_dir,\n",
@@ -944,202 +793,6 @@
     "    pprint(src)\n",
     "    print(\"Target\")\n",
     "    pprint(tran)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "under-tree/transformer-en-ru\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7548838870a0442898911d692f223290",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "pytorch_model.bin:   0%|          | 0.00/305M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "356322ac4d49446daf97a771c828562c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "target.spm:   0%|          | 0.00/1.08M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/under-tree/transformer-en-ru/commit/0ae78326a0aa651f468d66648c6c0387900543b2', commit_message='Upload tokenizer', commit_description='', oid='0ae78326a0aa651f468d66648c6c0387900543b2', pr_url=None, pr_revision=None, pr_num=None)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hf_name = cfg.finetuned.model_and_tokenizer_name\n",
-    "model.push_to_hub(hf_name)\n",
-    "tokenizer.push_to_hub(hf_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae06e329e8db426a956df03d17733769",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)okenizer_config.json:   0%|          | 0.00/816 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51ce96b7fca34ab8b448e67e630f18ca",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)olve/main/source.spm:   0%|          | 0.00/803k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44cd432925d145bcb35086c19291ddae",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading target.spm:   0%|          | 0.00/1.08M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6a938bc99cc4f368c457b9386636e43",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)olve/main/vocab.json:   0%|          | 0.00/2.73M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56d4d5ee87ac45c0a0f9da6452f7098c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)cial_tokens_map.json:   0%|          | 0.00/416 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54e53bc20d1e402696ec6b4fcbcc2501",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)lve/main/config.json:   0%|          | 0.00/1.46k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4663949ef2bd4bc4a4fa5b431c4b5952",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading pytorch_model.bin:   0%|          | 0.00/305M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45f8e29f06024786a57156d6d7bf1b6c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)neration_config.json:   0%|          | 0.00/293 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from transformers import MarianMTModel, MarianTokenizer\n",
-    "\n",
-    "path = hf_name\n",
-    "tokenizer = MarianTokenizer.from_pretrained(path)\n",
-    "model = MarianMTModel.from_pretrained(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentence_from_paper = \"Transformers are slow and memory-hungry on long sequences, since the time and memory complexity of self-attention are quadratic in sequence length. Approximate attention methods have attempted to address this problem by trading off model quality to reduce the compute complexity, but often do not achieve wall-clock speedup. \"\n",
-    "src_text = [sentence_from_paper]\n",
-    "tokenized_text = tokenizer(src_text, return_tensors=\"pt\", padding=True)\n",
-    "translated = model.generate(**tokenized_text)\n",
-    "decoded = tokenizer.batch_decode(translated, skip_special_tokens=True)"
    ]
   }
  ],
