--- a/notebooks/finetune/finetune.ipynb
+++ b/notebooks/finetune/finetune.ipynb
@@ -146,6 +146,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mrodionkhvorostov\u001b[0m (\u001b[33mwide-learning\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import wandb\n",
+    "wandb.login()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: WANDB_LOG_MODEL=true\n",
+      "env: WANDB_WATCH=true\n",
+      "env: WANDB_NOTEBOOK=finetune\n"
+     ]
+    }
+   ],
+   "source": [
+    "%env WANDB_LOG_MODEL=true\n",
+    "%env WANDB_WATCH=true\n",
+    "%env WANDB_NOTEBOOK=finetune"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -458,7 +508,8 @@
     }
    ],
    "source": [
-    "pprint_config(cfg.params.train_args)"
+    "pprint_config(cfg.params.train_args)\n",
+    "pprint_config(cfg.params.wandb_args)"
    ]
   },
   {
@@ -471,6 +522,7 @@
     "args = Seq2SeqTrainingArguments(\n",
     "    cfg.finetuned.output_dir,\n",
     "    **cfg.params.train_args,\n",
+    "    **cfg.params.wandb_args,\n",
     "    push_to_hub=True,\n",
     "    push_to_hub_model_id=cfg.fineturned.model_and_tokenizer_name\n",
     ")"
@@ -672,6 +724,15 @@
     "test_score = trainer.evaluate(tokenized_datasets[\"test\"])\n",
     "\n",
     "print(json.dumps(test_score, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wandb.finish()"
    ]
   },
   {
