--- a/notebooks/finetune/finetune.ipynb
+++ b/notebooks/finetune/finetune.ipynb
@@ -94,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/rodion/other/trans\n"
+      "/Users/user010/Desktop/Programming/ML/En2RuTranslator\n"
      ]
     }
    ],
@@ -127,7 +127,7 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"root\": \"/home/jovyan/rodion/other/trans\",\n",
+      "  \"root\": \"/Users/user010/Desktop/Programming/ML/En2RuTranslator\",\n",
       "  \"dataset\": {\n",
       "    \"path\": \"waleko/unarXive-en2ru\"\n",
       "  },\n",
@@ -156,7 +156,8 @@
       "  \"finetuned\": {\n",
       "    \"name\": \"opus-distilled-en-ru\",\n",
       "    \"model_and_tokenizer_name\": \"under-tree/transformer-en-ru\",\n",
-      "    \"output_dir\": \"/home/jovyan/rodion/other/trans/models/opus-distilled-en-ru/finetuned\"\n",
+      "    \"output_dir\": \"/Users/user010/Desktop/Programming/ML/En2RuTranslator/models/opus-distilled-en-ru/finetuned\",\n",
+      "    \"type\": \"seq2seq\"\n",
       "  }\n",
       "}\n"
      ]
@@ -237,7 +238,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "  ········\n"
@@ -1457,7 +1458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
